analyzing json for warnings